Project

General

Profile

Actions

Bug #55260

closed

ceph-volume lvm new-db requires 'bluestore-block-db-size' parameter

Added by Guillaume Abrioux about 2 years ago. Updated 6 months ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
reef, quincy, pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Typical error:

# ceph-volume lvm new-db --osd-id  0 --osd-fsid 055a5071-6ee0-4e73-a829-0febcce422d0 --target vg_ceph/lv1
--> Making new volume at /dev/vg_ceph/lv1 for OSD: 0 (/var/lib/ceph/osd/ceph-0)
 stdout: inferring bluefs devices from bluestore path
 stderr: Might need DB size specification, please set Ceph bluestore-block-db-size config parameter
--> failed to attach new volume, error code:1
--> Undoing lv tag set
Failed to attach new volume: vg_ceph/lv1
[root@quincy-1 /]#

the same operation in octopus and pacific doesn't require this parameter


Related issues 3 (0 open3 closed)

Copied to ceph-volume - Backport #62060: quincy: ceph-volume lvm new-db requires 'bluestore-block-db-size' parameterResolvedIgor FedotovActions
Copied to ceph-volume - Backport #62061: reef: ceph-volume lvm new-db requires 'bluestore-block-db-size' parameterResolvedIgor FedotovActions
Copied to ceph-volume - Backport #62062: pacific: ceph-volume lvm new-db requires 'bluestore-block-db-size' parameterResolvedIgor FedotovActions
Actions #1

Updated by Guillaume Abrioux about 2 years ago

  • Pull request ID set to 45856
Actions #2

Updated by Igor Fedotov about 1 year ago

  • Backport changed from quincy to quincy, pacific

Alternative fix to ceph-bluestore-tool is included in https://github.com/ceph/ceph/pull/50427

Actions #3

Updated by Igor Fedotov 10 months ago

  • Backport changed from quincy, pacific to reef, quincy, pacific
  • Pull request ID changed from 45856 to 52193
Actions #4

Updated by Igor Fedotov 10 months ago

  • Assignee changed from Guillaume Abrioux to Igor Fedotov
Actions #5

Updated by Igor Fedotov 9 months ago

  • Status changed from In Progress to Pending Backport
Actions #6

Updated by Backport Bot 9 months ago

  • Copied to Backport #62060: quincy: ceph-volume lvm new-db requires 'bluestore-block-db-size' parameter added
Actions #7

Updated by Backport Bot 9 months ago

  • Copied to Backport #62061: reef: ceph-volume lvm new-db requires 'bluestore-block-db-size' parameter added
Actions #8

Updated by Backport Bot 9 months ago

  • Copied to Backport #62062: pacific: ceph-volume lvm new-db requires 'bluestore-block-db-size' parameter added
Actions #9

Updated by Backport Bot 9 months ago

  • Tags set to backport_processed
Actions #10

Updated by Igor Fedotov 6 months ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF