os/bluestore: don't require bluestore_db_block_size when attaching new db/wal

Fixes: https://tracker.ceph.com/issues/55260

Signed-off-by: Igor Fedotov <igor.fedotov@croit.io>
(cherry picked from commit 9c3a8980bab0dd98185b0bb751c0dac09a9ab79e)